--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,59 @@
 <head>
 </head>
 <body>
-  <b>Customer Testimonials</b>
+<body bgcolor = "#efeee7">
+<center>
+ <h1><font color = "#2E8B57"><b><u>Khaana - Customer Testimonials</u></b></font></h1>
+<br>
+<font size = "5">Our customers are what drive our success, making them a focus in all that we do. <b>We believe that great food, like ours, brings people together.</b> But don't just take our word for it. Hear directly from our valued customers, whose feedback inspires us everyday.</font>
+<br>
+<br>
+<br>
+<br>
+<font size = "4"><font color = "#6b8e23"><i>"Khaana makes eating healthy super easy. There is nothing better than having fresh meals delivered right to my door!"</i>- Sally S., Chicago, IL</font></font>
+<br>
+<img src = "food ex">
+<br>
+<br>
+<br>
+<br>
+<br>
+<font size = "4"><font color = "#6b8e23"><i>"You can truly taste the quality in every bite, and the convenience is unbeatable. Thank you Khaana."</i>- Patrick P., Indianapolis, IN</font></font>
+<br>
+<br>
+<br>
+<br>
+<br>
+<font size = "4"><font color = "#6b8e23"><i>"I love knowing that I'm receiving nutritious, locally-sourced meals. It feels great supporting midwest farmers while enjoying amazing food."</i>- Daniella D., Milwaukee, WI</font></font>
+<br>
+<br>
+<br>
+<br>
+<br>
+<font size = "4"><font color = "#6b8e23"><i>"Khaana has changed the way my family eats. Keep up the great work."</i>- Justin J., Columbus, OH</font></font>
+<br>
+<br>
+<br>
+<br>
+<br>
+<font size = "4"><font color = "#6b8e23"><i>"It's like having a personal chef who truly cares where the food comes. I can't recommend Khaana enough!"</i>- Rachel R., Des Moines, IA</font></font>
+</center>
+<br>
+<br>
+<h2><font color = "#2E8B57"><b><u>Why customers love Khaana:</u></b></font></h3>
+<ul>
+<li>Locally sourced, farm-fresh ingredients</li>
+<li>Healthy meals delivered right to your door</li>
+<li>Flexible plans</li>
+<li>Eco-friendly packaging that minimizes waste</li>
+</ul>
+<br>
+<br>
+<h2><font color = "#2E8B57"><b><u>Top 3 Reasons Customers Recommend Khaana:</u></b></font></h3>
+<ol>
+<li>Consistently fresh, high quality meals</li>
+<li>Convenient delivery catering to busy lifestyles</li>
+<li>Supporting Midwest farmers and local businesses</li>
+
 </body>
 </html>
