--- a/Index.html
+++ b/Index.html
@@ -56,6 +56,6 @@
 <li>Consistently fresh, high quality meals</li>
 <li>Convenient delivery catering to busy lifestyles</li>
 <li>Supporting Midwest farmers and local businesses</li>
-
+<script>document.write(document.lastModified);</script>
 </body>
 </html>
