--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 <body bgcolor = "#efeee7">
 <center>
  <img src ="imagesfr/thumbnail_Khaana_Logo.png">
- <h1><font color = "#2E8B57"><b><u>Khaana - Customer Testimonials</u></b></font></h1>
+ <h1><font color = "#2E8B57" face="Verdana"><b><u>Khaana - Customer Testimonials</u></b></font></h1>
 <br>
 <font size = "5">Our customers are what drive our success, making them a focus in all that we do. <b>We believe that great food, like ours, brings people together.</b> But don't just take our word for it. Hear directly from our valued customers, whose feedback inspires us everyday.</font>
 <br>
