--- a/Index.html
+++ b/Index.html
@@ -57,6 +57,15 @@
 <li>Consistently fresh, high quality meals</li>
 <li>Convenient delivery catering to busy lifestyles</li>
 <li>Supporting Midwest farmers and local businesses</li>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <center>
 <script>document.write(document.lastModified);</script>
+</center>
 </body>
 </html>
