--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <style>
+  body {
+    font-family: Arial, sans-serif; /* all normal text */
+  }
+  h1, h2, h3 {
+    font-family: Verdana, sans-serif; /* headings */
+  }
+</style>
 </head>
 <body>
 <body bgcolor = "#efeee7">
