--- a/Index.html
+++ b/Index.html
@@ -3,10 +3,10 @@
 <head>
  <style>
   body {
-    font-family: Arial, sans-serif; /* all normal text */
+    font-family: Arial, sans-serif;
   }
   h1, h2, h3 {
-    font-family: Verdana, sans-serif; /* headings */
+    font-family: Verdana, sans-serif;
   }
 </style>
 </head>
