--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
 <br>
 <br>
 <br>
-<font size = "4"><font color = "#6b8e23"><i>"Khaana makes eating healthy super easy. There is nothing better than having fresh meals delivered right to my door!"</i>- Sally S., Chicago, IL</font></font>
+<font size = "4"><font color = "#6b8e23"><i>"Khaana makes eating healthy super easy. There is nothing better than having fresh meals delivered right to my door! I especially love how easy they are to grab and go."</i>- Sally S., Chicago, IL</font></font>
 <br>
 <img src = "imagesfr/food ex.jpg" width=128 height=128>
 <br>
