--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,11 @@
  <style>
   body {
     font-family: Arial, sans-serif;
+   background-image:
+    url('imagesfr/Khaanabg.png');
+   background-size: cover;
+   background-repeat: no repeat;
+   background-attachment: fixed;
   }
   h1, h2, h3 {
     font-family: Verdana, sans-serif;
