--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
  <img src ="imagesfr/thumbnail_Khaana_Logo.png" width=128 height=128>
  <h1><font color = "#2E8B57" face="Verdana"><b><u>Khaana - Customer Testimonials</u></b></font></h1>
 <br>
-<font size = "5">Our customers are what drive our success, making them a focus in all that we do. <b>We believe that great food, like ours, brings people together.</b> But don't just take our word for it. Hear directly from our valued customers, whose feedback inspires us everyday.</font>
+<font size = "4">Our customers are what drive our success, making them a focus in all that we do. <b>We believe that great food, like ours, brings people together.</b> But don't just take our word for it. Hear directly from our valued customers, whose feedback inspires us everyday.</font>
 <br>
 <br>
 <br>
@@ -77,6 +77,7 @@
  <br>
  <br>
  <br>
+ <font size = "2"><font color = "#6b8e23">Questions about Khaana? Contact us!</font></font>
  <center>
  <img src ="imagesfr/thumbnail_Khaana_Logo.png" width=128 height=128>
 <script>document.write(document.lastModified);</script>
