--- a/Index.html
+++ b/Index.html
@@ -77,7 +77,7 @@
  <br>
  <br>
  <br>
- <font size = "2"><font color = "#6b8e23">Questions about Khaana? Contact us!</font></font>
+ <font size = "2"><font color = "#6b8e23">Questions about Khaana? Contact us!FILL IN EMAIL HERE</font></font>
  <center>
  <img src ="imagesfr/thumbnail_Khaana_Logo.png" width=128 height=128>
 <script>document.write(document.lastModified);</script>
